make sure shared-scratch also mounted for the caches

--- a/configs/worker-specs/github-workers-cpu.tmpl
+++ b/configs/worker-specs/github-workers-cpu.tmpl
@@ -27,6 +27,8 @@ spec:
     - mountPath: /home/jovyan/catlas
       name: shared-scratch
       subPath: catlas_runners/${{ RUNNER_ID }}/catlas
+    - mountPath: /home/jovyan/shared-scratch
+      name: shared-scratch
   volumes:
   - name: scratch-scratch
     persistentVolumeClaim:
