--- a/configs/worker-specs/github-workers-cpu.tmpl
+++ b/configs/worker-specs/github-workers-cpu.tmpl
@@ -30,6 +30,6 @@ spec:
     - mountPath: /home/jovyan/shared-scratch
       name: shared-scratch
   volumes:
-  - name: scratch-scratch
+  - name: shared-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
