update hybrid cluster configs

--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -24,13 +24,16 @@ spec:
         memory: 9G
     volumeMounts:
     - mountPath: /home/jovyan/ocp
-      name: shared-scratch
-      subPath: catlas_runners/{{ GITHUB_RUN_ID }}/ocp
+      name: workspace-inference
+      subPath: ocp
     - mountPath: /home/jovyan/catlas
-      name: shared-scratch
-      subPath: catlas_runners/{{ GITHUB_RUN_ID }}/catlas
+      name: workspace-inference
+      subPath: catlas
     - mountPath: /home/jovyan/shared-scratch
       name: shared-scratch
+    - mountPath: /home/jovyan/dask-worker-space
+      name: shared-scratch
+      subPath: catlas/dask-worker-space
   volumes:
   - name: shared-scratch
     persistentVolumeClaim:
