fix missing workspace volume in cpu/gpu configs for dev dask cluster

--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -38,3 +38,6 @@ spec:
   - name: shared-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
+  - name: workspace-inference
+    persistentVolumeClaim:
+      claimName: workspace-inference
