--- a/configs/dask_cluster/dev_kube_cluster/worker-gpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-gpu.tmpl
@@ -38,3 +38,6 @@ spec:
   - name: shared-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
+  - name: workspace-inference
+    persistentVolumeClaim:
+      claimName: workspace-inference
