clean up for api

--- a/configs/dask_cluster/dev_kube_cluster/worker-gpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-gpu.tmpl
@@ -13,6 +13,8 @@ spec:
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
     - name: MALLOC_TRIM_THRESHOLD_
       value: 0
+    - name: MP_API_KEY
+      value: "your_api_key"
     resources:
       limits:
         cpu: "4"
