--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -5,7 +5,7 @@ spec:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
     args: [dask-worker, --nthreads, '1',--nprocs,'2', --no-dashboard, --memory-limit,'10 GiB',--death-timeout, '600']
-    name: dask
+    name: dask-worker
     env: 
     - name: OMP_NUM_THREADS
       value: 4
