--- a/configs/dask_cluster/github_kube_cluster/worker-gpu-github.tmpl
+++ b/configs/dask_cluster/github_kube_cluster/worker-gpu-github.tmpl
@@ -5,7 +5,7 @@ spec:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
     args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'20 GiB',--death-timeout, '600',--resources,"GPU=1"]
-    name: dask
+    name: dask-worker
     env:
     - name: OMP_NUM_THREADS
       value: 1
