removed bad configs

--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -4,13 +4,13 @@ spec:
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '1',--nprocs,'2', --no-dashboard, --memory-limit,'18 GiB',--death-timeout, '600']
+    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'18 GiB',--death-timeout, '600']
     name: dask
     env: 
     - name: OMP_NUM_THREADS
-      value: 4
+      value: 1
     - name: MP_API_KEY
-      value: {{ MP_API_KEY }}
+      value: "iHay4qJxqBUVpmbX20XJ43gQfXI77JhF"
     - name: PYTHONPATH
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
     - name: NVIDIA_VISIBLE_DEVICES
