--- a/configs/dask_cluster/dev_kube_cluster/worker-gpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-gpu.tmpl
@@ -14,7 +14,7 @@ spec:
     - name: MALLOC_TRIM_THRESHOLD_
       value: 0
     - name: MP_API_KEY
-      value: {{ MP_API_KEY }}
+      value: "iHay4qJxqBUVpmbX20XJ43gQfXI77JhF"
     resources:
       limits:
         cpu: "4"
