fast network for cpu

--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -1,5 +1,14 @@
 kind: Pod
 spec:
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: network
+            operator: In
+            values:
+            - 10gb
   restartPolicy: Never
   containers:
   - image: ulissigroup/kubeflow:predictions
