--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -19,7 +19,7 @@ spec:
     - name: OMP_NUM_THREADS
       value: 1
     - name: MP_API_KEY
-      value: "iHay4qJxqBUVpmbX20XJ43gQfXI77JhF"
+      value: "your_api_key"
     - name: PYTHONPATH
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
     - name: NVIDIA_VISIBLE_DEVICES
