change all ymls to new image, change import for mp_api

--- a/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
+++ b/configs/dask_cluster/dev_kube_cluster/worker-cpu.tmpl
@@ -11,7 +11,7 @@ spec:
             - 10gb
   restartPolicy: Never
   containers:
-  - image: ulissigroup/kubeflow:predictions
+  - image: ulissigroup/catlas:latest
     imagePullPolicy: Always
     args: [dask-worker, --nthreads, '1',--nprocs,'2', --no-dashboard, --memory-limit,'10 GiB',--death-timeout, '600']
     name: dask-worker
